project content restore